# flutter-native-callbacks-example

./: README.md  pubspec.yaml
android/: CMakeLists.txt  build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: native_callbacks_example.cpp  native_callbacks_example.h
android/src/main/kotlin/com/example/native_callbacks_example/: NativeCallbacksExamplePlugin.kt
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/native_callbacks_example_example/: MainActivity.kt
example/android/app/src/profile/: AndroidManifest.xml
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/test/: widget_test.dart
ios/: native_callbacks_example.podspec
ios/Classes/: NativeCallbacksExamplePlugin.h  NativeCallbacksExamplePlugin.m  SwiftNativeCallbacksExamplePlugin.swift  Utils.swift
ios/Classes/Shared/: CallbackManager.cpp  CallbackManager.h
lib/: native_callbacks_example.dart
test/: native_callbacks_example_test.dart
